2016-11-26 Fred Gleason <fredg@paravelsystems.com>
	* Added 'xdg/lwnetdelay.desktop'.
	* Enabled the 'make rpm' target.
2016-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Changed 'MAX_DELAY' to '60' in 'src/common/config.h'.
	* Fixed a bug in 'src'lwnetrouterd/lwnetrouterd.cpp' that caused
	calculation of delay interval top be incorrect for intervals
	greater than 15 seconds.
2016-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'DelayChangePercent=' parameter in lwnetrouter.conf(5)
	from the [Audio] to the [Input<n>] section.
2016-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Consolidated the [Audio] section parameters of lwnetrouter.conf(5)
	into the [Global] section.
2016-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'LivewireIpAddress=' parameter to the [Global] section
	of lwnetrouter.conf(5).
2016-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'FullDelay=' parameter to the [Input<n>] section
	of lwnetrouter.conf(5).
2016-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Added a protocol driver for Software Authority protocol in
	'src/lwnetrouterd/protocol_sap.cpp' and
	'src/lwnetrouterd/protocol_sap.h'.
2016-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.0.
2016-12-03 Fred Gleason <fredg@paravelsystems.com>
	* Implemented button lamp feedback for the GPIO delay controls.
2016-12-03 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/lwnetdelay/lwnetdelay.cpp that broke title
	bar display.
2016-12-03 Fred Gleason <fredg@paravelsystems.com>
	* Rearranged the order of the controls on the Delay Control widget
	to match that of Element control surfaces.
2016-12-03 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/lwnetrouterd/lwnetrouterd.cpp' that caused
	the first tenths of a second of audio to fail to be dumped.
2016-12-04 Fred Gleason <fredg@paravelsystems.com>
	* Added support for incremental dumping.